--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 settings:
   title: 'Status Page'
-  url: 'https://status-page.eidam.dev' # used for Slack messages
-  logo: logo-192x192.png # image in ./public/ folder
+  url: 'https://https://status.ictoxlab.com/' # used for Slack messages
+  logo: logo-color.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
 
@@ -15,23 +15,15 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+  - id: www-ictoxlab-com # unique identifier
+    name: ictoxlab.com
+    url: 'https://ictoxlab.com/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
 
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
-    method: GET
-    expectStatus: 200
-
-  - id: www-ictoxlab-com
-    name: IC Tox Lab
-    url: 'https://ictoxlab.com/'
+  - id: www-help-ictoxlab.com
+    name: help.ictoxlab.com
+    url: 'https://help.ictoxlab.com'
     method: GET
     expectStatus: 200
