--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 settings:
-  title: 'Status Page'
+  title: 'IC Tox Lab System Status'
   url: 'https://https://status.ictoxlab.com/' # used for Slack messages
   logo: logo-color.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
