--- a/config.yaml
+++ b/config.yaml
@@ -27,4 +27,4 @@ monitors:
     url: 'https://help.ictoxlab.com'
     method: GET
     expectStatus: 302
-    followRedirect: true # should follow
+    followRedirect: false # should follow
