--- a/config.yaml
+++ b/config.yaml
@@ -26,5 +26,5 @@ monitors:
     name: help.ictoxlab.com
     url: 'https://help.ictoxlab.com'
     method: GET
-    expectStatus: 302
-    followRedirect: false # should follow
+    expectStatus: 200
+    followRedirect: true # should follow
