--- a/config.yaml
+++ b/config.yaml
@@ -28,3 +28,10 @@ monitors:
     method: GET
     expectStatus: 200
     followRedirect: true # should follow
+    
+    - id: mytoxlabsso
+    name: MyToxLab SSO
+    url: 'https://login.microsoftonline.com/a352cf2e-213f-4d2a-9df8-3919c48dcc20/oauth2/authorize?client_id=4bc62057-399e-4829-b7b7-93f56baf530c'
+    method: GET
+    expectStatus: 200
+    followRedirect: true # should follow
